[refactor] ActiveSession 엔티티를 추가하여, 사용자의 다중 로그인을 방지